# blackstone

./: Cargo.toml  README.md  ast.md  blackstone.jsonc  blackstone.lang  dump.csv  test.foo
.github/workflows/: rust.yml
ast/: notes.md
ast/event/: ast.yml  code.md
ast/function/: ast.yml  code.md
backend/: IDK.md  README.md  SYNTAX_SPEC.md  action_dump.json  location.jsond
backend/irsave/: README.md
backend/irsave/ir/: codeblock.rs
backend/samples/: all_blocks.json  decode.py
backend/samples/recreate_this/: entity_event.json  player_event.json  templates.txt
backend/samples/type_specific/: cancel_event.bls  cancel_event.json  damage_event.json  player_damage_player.bls
backend/samples/types/: all.json
backend/static/: START_PROCESS_ITEMS
backend_examples/: oop.json  oop_impl.json
backend_examples/to_recreate/: player_event.bls
examples/: Cargo.toml  foo.rs  hello.blst  oop.bls
examples/to_recreate/: entity_event.bls
samples/: send_message.json
samples/recreate_this/: process.json  scuffed_add_funtion.json
samples/scripts/: analyze.py  dump.json
samples/types/: tags.json
scripts/: fun.blst  gen.blst  goodbye.blst  hello.blst  item_api.blst  join.blst  pit.blst  quit.blst
src/: lexer.rs  main.rs  parse.rs  util.rs
src/codegen/: block.rs  item.rs  item_data.rs  misc.rs  mod.rs  parse.rs
src/ir/: actions.rs  codeblock.rs  events.rs  ifs.rs  mod.rs  values.rs
src/lexer/: lex.rs  mod.rs  tokens.rs
src/parser/: datatypes.rs  events.rs  mod.rs  parse.rs  save.txt  save_2_datatypes.txt  save_2_mod.txt  save_2_parse.txt  token.rs
src/parser/ast/: mod.rs
src/parser/ast/common/: mod.rs
src/parser/ast/expr/: literal.rs  mod.rs
src/parser/ast/item/: bind.rs  event.rs  mod.rs  utils.rs
src/parser/ast/statement/: mod.rs
src/parser/ast/stmt/: mod.rs
src/parser/parsers/: block.rs  mod.rs
src/parser/parsers/block/: mod.rs  statement.rs
src/parser/parsers/expr/: literal.rs  mod.rs
src/parser/parsers/items/: event.rs  mod.rs
src/template/: lexer.rs  mod.rs
src/template/parser/: ast.rs  mod.rs  parser.rs
src/tokengrouper/: grouper.rs  lex.rs  mod.rs
