[package]
name = "blackstonedf"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/BlackstoneDF/blackstone"
homepage = "https://blackstonedf.github.io/"
description = "A compiler for the Blackstone programming language."

[[bin]]
path = "./src"
name = "bl"

# Please try to minimize dependencies.
# I don't want a really long time taken when building.
[dependencies]
ariadne = "0.2.0"
base64 = "0.21.0"
chumsky = { version = "1.0.0-alpha.3", features = ["regex"] }
itertools = "0.10.5"
lazy_static = "1.4.0"
libflate = "1.3.0"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
strum = "0.24.1"
strum_macros = "0.24.3"
toml = "0.7.3"
