[package]
name = "blackstone"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ariadne = "0.3.0"
base64 = "0.21.0"
chumsky = { version = "1.0.0-alpha.4", features = ["regex"] }
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.96"
toml = "0.7.3"
logos = "0.13.0"
im = "15.1.0"
indexmap = "2.0.0"

# lazy_static = "1.4.0"
# reqwest = { version = "0.11.17", features = ["blocking"] }
# libflate = "2.0.0"
# itertools = "0.11.0"
# strum = "0.25.0"
# strum_macros = "0.25.1"